apps/example-apps/simple-load-tester/web-server/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-load-tester
    component: web-server
  name: simple-load-tester-web-server
  namespace: replace-me
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "simple-load-tester-web-server"
          },
          "fieldPath": "spec.template.spec.containers[?(@.name==\"app\")].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-load-tester
      component: web-server
  strategy: {}
  template:
    metadata:
      labels:
        app: simple-load-tester
        component: web-server
    spec:
      containers:
        - image: ' '
          name: app
          ports:
          - containerPort: 8081
          resources: {}
status: {}
